Update index.html styles for theme btns
Signed-off-by: simobuilds <136658428+simobuilds@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Theme Switch Test</title>
+    <title>Let us all advance</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="dark-mode.css" title="dark">
     <link rel="stylesheet" href="pink-mode.css" title="pink">
@@ -18,7 +18,10 @@
             margin-bottom: 20px;
         }
 
-        .theme-button {
+        .theme-button  {
+            padding: 8px 15px;
+            margin-right: 10px;
+            cursor: poin        
             padding: 8px 15px;
             margin-right: 10px;
             cursor: pointer;
@@ -27,7 +30,24 @@
             background-color: #f0f0f0;
             transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition for buttons */
         }
+     .btn{
+            padding: 8px 15px;
+            margin-right: 10px;
+            cursor: poin        
+            padding: 8px 15px;
+            margin-right: 10px;
+            cursor: pointer;
+            border: 1px solid #ccc;
+            border-radius: 5px;
 
+            transition: background-color 0.3s ease, color 0.3s ease; /* Smooth transition for buttons */
+        }
+     }
+.theme-dark {
+    background-color: steelblue ;
+    button-text: #000000;
+}
+        
         .theme-button:hover {
             background-color: #e0e0e0;
         }
@@ -45,19 +65,183 @@
         <div class="theme-switcher">
             <button class="theme-button" onclick="setTheme('')" data-theme-option="light">Light</button>
             <button class="theme-button" onclick="setTheme('pink')" data-theme-option="pink">Pink</button>
-            <button class="theme-button" onclick="setTheme('dark')" data-theme-option="dark">Dark Mode</button>
+            <button class="theme-dark btn" onclick="setTheme('dark')" data-theme-option="dark">Dark Mode</button>
         </div>
     </section>
 
-    <div class="content-box">
-        <h1>Welcome!</h1>
-        <p>This is some sample content to test the theme switching functionality.</p>
-        <ul>
-            <li>Item 1</li>
-            <li>Item 2</li>
-            <li>Item 3</li>
-        </ul>
-    </div>
+      <p>
+    <!--Tab tio edit-->we can not advance for jesus if I am not progressing in christ.
+  </p>
+  <p>
+    <!--Tab to edit-->Immaturity need s to end. it leads to fights and quarrels,makes you powerless and useless in God's Kingdom. we are all on a journey of removing immaturity from our lifes.
+  </p>
+  <h2>
+    <!--Tab to edit-->Far less powerfull than it should be
+  </h2>
+  <p>
+    <!--Tab to edit-->walking in sifn and wonders
+  </p>
+  <h2>
+    <!--Tab to edit-->set people free. became a powerfull vessel.
+  </h2>
+  <h3>
+    <!--Tab to edit-->1 Corinthians 3:1-3
+  </h3>
+  <h2>
+    Making the impossible being possible
+    <!--Tab to edit-->
+  </h2>
+  <h3>
+    <!--Tab to edit-->Facing immaturity
+  </h3>
+  <h4>
+    <!--Tab to edit-->Dominated by the flesh mindset
+  </h4>
+  <h2>
+    <!--Tab to edit-->Milk vs Solid Food
+  </h2>
+  <p>
+    <!--Tab to edit-->Being birthed into a family.
+  </p>
+  <p>
+    <!--Tab to edit-->Why are you so strickt?
+  </p>
+  <p>
+    <!--Tab to edit-->Do you compare yourself with othera. Centered on yourselves, dominated by the flesh.
+  </p>
+  <h3>
+    <!--Tab to edit-->Decipleship will teach you. It will illuminate your self centered lives.
+  </h3>
+  <h2>
+    <!--Tab to edit-->Do not be conformed, to the world but be transformed by the renewal of the spirit.
+  </h2>
+  <h3>
+    <!--Tab to edit-->Time to advance in gk, by removing, fleshly mindset, stop living lifs cebtered around ourselves.
+  </h3>
+  <h1>
+    <!--Tab to edit-->Divine Calling
+  </h1>
+  <h2>
+    <!--Tab to edit-->You should walk holy in a way that is suitable to your high rank. Youve been given a divine calling.
+  </h2>
+  <h4>
+    <!--Tab to edit-->Is it okay just to be here now and then or to live unholy?
+  </h4>
+  <p>
+    <!--Tab to edit-->we need to focus on holiness with reverance.
+  </p>
+  <h3>
+    <!--Tab to edit-->Ephesians 4:1-6
+  </h3>
+<p>
+  <!--Tab to edit-->Dont make our lives difficult, work with us, dont stone us and call us stupid, you aint leading no one except your cat and the dog. Be careful here. The Lord will give you stubborn and revelious ones. With tender humility., quiet patience. Always demonstrate gentleness, . 
+</p>
+<p>
+  <!--Tab to edit-->Lord kept Israelites 40 years in a desert.
+</p
+<p>
+  <!--Tab to edit-->Thank you for what you are doing for our Church.
+</p>
+<p>
+  <!--Tab to edit-->Being one body and one spirit. Because we are born from one god for divine destiny. One father, one baptism.
+</p>
+<p>
+  <!--Tab to edit-->When you badmouth sister so and so remember Jesus lives in her. Pray in spirit, move in spirit. Works through us all.
+</p>
+<p>
+  <!--Tab to edit-->You need to get excited so you can have the same glorious hope .
+</p>
+<p>
+  Dont be just a carer but care about others, tell them how much you love them, thank then for their prescence.
+</p>
+<h3>
+  <!--Tab to edit-->
+  I love yoy, I forgive yoy but I am moving further it is not going to divide us. 
+</h3>
+<h2>
+  <!--Tab to edit-->Hebrews 6:1-3
+  <h3>
+    <!--Tab to edit-->Now is the time, let us progress now.
+  </h3>
+ 
+    <!--Tab to edit-->You should believe, and train these principles, the foundations have been already laid for us, so with<b>
+      God's enablement 
+    </b>we will move into deeper truths. <h3 >
+      <!--Tab to edit-->Mentor in thesefoundations.  We come with our half dead brain and tell them to live this way, so we blame the devil and not progress into perfection.
+    </h3 >
+    <h2>
+      <!--Tab to edit-->
+    <h2>>
+      <!--Tab to edit-->Integrate Godly values unto your daily lives. It will move you towards perfection. Unless you grow in Jesus, move deeper into the progress to perfection. As the father in heaven is perfect.
+    </h2>
+    <h3>
+      <!--Tab to edit--> 12:10
+    </h3>
+      <!--Tab to edit-->
+    <h2>
+      Immature born against believers, are far less powerful .Its huge problem, cause division in vision, mission and relatiinships. Infants feeding on milk.
+</h2>
+<p>
+  <!--Tab to edit-->Change when you repent, left dead works behind, the doctrine of baptisms. 
+</p>
+<h3>
+  <!--Tab to edit-->Let us understand thedivine calling, we need to get it right. And if we can get them right between themselves
+</h3>
+<p>
+  <!--Tab to edit-->One father, one baptism, one foundation.
+</p>
+<h3>
+  <!--Tab to edit-->How can we move forward if we lay different foundations that we think to be fit. Eveyone in the body has to get it right.
+</h3>
+<h1>
+  <!--Tab to edit-->Psalms 11:3
+</h1>
+<h2>
+  <!--Tab to edit-->At some point we need to say these are the foundation we build upon. Lord is using you to build another church which is another house.
+</h2>
+<h1>
+  <!--Tab to edit-->Ephesians 4:7-16
+</h1>
+<h3>
+  <!--Tab to edit-->Heavenly father has Appointed some with the grace to be teachers, apostles. Given portion of supernatural grace. Finally we become one.
+</h3>
+<h4>
+  <!--Tab to edit--> Be excited about the Grace ministry has given you.
+  
+</h4>
+<h5>
+  <!--Tab to edit-->Enlarge body of Christ. Holy spirit and gifts work together to grow his Church. 
+</h5>
+<h2>
+  <!--Tab to edit-->Ephesians 4:7-16
+</h2>
+<h3>
+  <!--Tab to edit-->
+  Ephesians 4:13 NIV
+[13] until we all reach unity in the faith and in the knowledge of the Son of God and become mature, attaining to the whole measure of the fullness of Christ.
+
+https://bible.com/bible/111/eph.4.13.NIV
+</h3>
+<h1>
+  <!--Tab to edit--> Romans 1:8-12
+</h1>
+<h3>
+  <!--Tab to edit-->Be careful with young, Apostolic leaders ,
+</h3>
+<h4>
+  <!--Tab to edit--> Something wonderful will be released
+</h4>
+<h2>
+  <!--Tab to edit-->
+  malachi 3:10
+</h2>
+Malachi 3:10 NIV
+[10] Bring the whole tithe into the storehouse, that there may be food in my house. Test me in this,” says the Lord Almighty, “and see if I will not throw open the floodgates of heaven and pour out so much blessing that there will not be room enough to store it.
+
+https://bible.com/bible/111/mal.3.10.NIV
+<h3>
+  <!--Tab to edit-->May God move, incourage and bless you.
+</h3>
 
     <script>
         const body = document.body;
