--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+kind<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -134,7 +134,7 @@
     <!--Tab to edit-->Ephesians 4:1-6
   </h3>
     <audio id="myAudio">
-  <source src="notification.m4a " type="audio/mpeg">
+  <source src="trimephesians4_1-6" type="audio/mpeg">
 </audio>
 
 <button onclick="playAudio()">Play</button>
