--- a/index.html
+++ b/index.html
@@ -169,6 +169,14 @@
 <h2>
   <!--Tab to edit-->Hebrews 6:1-3
   <h3>
+      <audio id="player" src="Hebrews_6"></audio>
+<div>
+  <button onclick="document.getElementById('player').play()">Play</button>
+  <button onclick="document.getElementById('player').pause()">Pause</button>
+  <input type="range" id="volume" min="0" max="1" step="0.1" value="1"
+         onchange="document.getElementById('player').volume = this.value">
+  <label for="volume">Volume</label>
+</div>
     <!--Tab to edit-->Now is the time, let us progress now.
   </h3>
  
