--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+hi<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -212,6 +212,23 @@
 <h1>
   <!--Tab to edit-->Psalms 11:3
 </h1>
+        <div class="audio-player">
+  <audio id="myAudio" src="psalms11_3_sim"></audio>
+  
+  <div class="controls">
+    <button id="playBtn">▶️ Play</button>
+    <button id="pauseBtn">⏸ Pause</button>
+    <button id="restartBtn">⏮ Restart</button>
+    
+    <!-- Timeline (Seek Bar) -->
+    <input type="range" id="seekBar" min="0" max="100" value="0">
+    <span id="currentTime">0:00</span> / <span id="duration">0:00</span>
+    
+    <!-- Volume Control -->
+    <input type="range" id="volumeBar" min="0" max="1" step="0.1" value="1">
+    <span id="volumeDisplay">100%</span>
+  </div>
+</div>
 <h2>
   <!--Tab to edit-->At some point we need to say these are the foundation we build upon. Lord is using you to build another church which is another house.
 </h2>
